--- a/src/view/layout/RadarDialog.fxml
+++ b/src/view/layout/RadarDialog.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane prefHeight="645.0" prefWidth="1161.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RadarDialogController">
+<GridPane prefHeight="613.0" prefWidth="932.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RadarDialogController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="647.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="300.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -34,9 +33,13 @@
                 <RowConstraints fillHeight="false" maxHeight="204.0" />
                 <RowConstraints fillHeight="false" maxHeight="204.0" />
                 <RowConstraints fillHeight="false" maxHeight="204.0" />
-                <RowConstraints fillHeight="false" maxHeight="204.0" />
-                <RowConstraints fillHeight="false" maxHeight="204.0" />
                 <RowConstraints maxHeight="80.0" minHeight="10.0" prefHeight="130.0" vgrow="ALWAYS" />
+                <RowConstraints fillHeight="false" maxHeight="204.0" />
+                <RowConstraints fillHeight="false" maxHeight="204.0" />
+                <RowConstraints fillHeight="false" maxHeight="204.0" />
+                <RowConstraints fillHeight="false" maxHeight="204.0" />
+            <RowConstraints />
+            <RowConstraints />
             </rowConstraints>
             <children>
                 <Label prefHeight="17.0" prefWidth="192.0" text="Jednostka czasowa:" />
@@ -47,19 +50,27 @@
                 <TextField fx:id="propagationVelocityInput" promptText="[m/s]" GridPane.rowIndex="5" />
                 <Label text="Okres sygnału sondującego:" GridPane.rowIndex="6" />
                 <TextField fx:id="signalPeriodInput" promptText="[s]" GridPane.rowIndex="7" />
-                <Label text="Liczba pomiarów:???" GridPane.rowIndex="8" />
-                <TextField fx:id="measuresCountInput" GridPane.rowIndex="9" />
-                <Label text="Częstotliwość próbkowania:" GridPane.rowIndex="10" />
-                <TextField fx:id="probeFrequencyInput" promptText="[Hz]" GridPane.rowIndex="11" />
-                <Label text="Długość buforów:" GridPane.rowIndex="12" />
-                <TextField fx:id="bufferSizeInput" GridPane.rowIndex="13" />
-                <Label text="Okres raportowania:" GridPane.rowIndex="14" />
-                <TextField fx:id="reportPeriodInput" promptText="[s]" GridPane.rowIndex="15" />
-                <Button fx:id="radarBtn" mnemonicParsing="false" prefWidth="120.0" text="Uruchom radar" GridPane.halignment="CENTER" GridPane.rowIndex="16" GridPane.valignment="TOP">
+                <Label text="Częstotliwość próbkowania:" GridPane.rowIndex="8" />
+                <TextField fx:id="probeFrequencyInput" promptText="[Hz]" GridPane.rowIndex="9" />
+                <Label text="Długość buforów:" GridPane.rowIndex="10" />
+                <TextField fx:id="bufferSizeInput" GridPane.rowIndex="11" />
+                <Label text="Okres raportowania:" GridPane.rowIndex="12" />
+                <TextField fx:id="reportPeriodInput" promptText="[s]" GridPane.rowIndex="13" />
+                <Button fx:id="radarBtn" mnemonicParsing="false" prefWidth="120.0" text="Uruchom radar" GridPane.halignment="CENTER" GridPane.rowIndex="14" GridPane.valignment="CENTER">
                     <GridPane.margin>
                         <Insets bottom="5.0" top="10.0" />
                     </GridPane.margin>
                 </Button>
+                <Label text="Oryginalny dystans [m]:" GridPane.rowIndex="15" />
+                <Label fx:id="originalDistanceLabel" GridPane.rowIndex="16">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></Label>
+                <Label text="Obliczony dystans [m]:" GridPane.rowIndex="17" />
+                <Label fx:id="calculatedDistanceLabel" GridPane.rowIndex="18">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></Label>
             </children>
         </GridPane>
         <GridPane hgap="5.0" prefHeight="245.0" prefWidth="465.0" vgap="5.0" GridPane.columnIndex="1">
@@ -108,22 +119,6 @@
                 <Insets left="10.0" />
             </GridPane.margin>
         </GridPane>
-      <GridPane GridPane.columnIndex="2">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Oryginalny dystans [m]:" />
-            <Label text="Obliczony dystans [m]:" GridPane.columnIndex="1" />
-            <ListView fx:id="originalDistanceListView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-            <ListView fx:id="calculatedDistanceListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
     </children>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
