--- a/src/view/layout/RadarDialog.fxml
+++ b/src/view/layout/RadarDialog.fxml
@@ -24,7 +24,6 @@
                 <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" />
                 <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" />
                 <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" />
-                <RowConstraints fillHeight="false" maxHeight="1.7976931348623157E308" />
                 <RowConstraints fillHeight="false" maxHeight="204.0" />
                 <RowConstraints fillHeight="false" maxHeight="204.0" />
                 <RowConstraints fillHeight="false" maxHeight="204.0" />
@@ -42,32 +41,30 @@
             <RowConstraints />
             </rowConstraints>
             <children>
-                <Label prefHeight="17.0" prefWidth="192.0" text="Jednostka czasowa:" />
-                <TextField fx:id="timeUnitInput" promptText="[s]" GridPane.rowIndex="1" />
-                <Label text="Prędkość rzeczywista:" GridPane.rowIndex="2" />
-                <TextField fx:id="realVelocityInput" promptText="[m/s]" GridPane.rowIndex="3" />
-                <Label text="Prędkość rozchodzenia się sygnału:" GridPane.rowIndex="4" />
-                <TextField fx:id="propagationVelocityInput" promptText="[m/s]" GridPane.rowIndex="5" />
-                <Label text="Okres sygnału sondującego:" GridPane.rowIndex="6" />
-                <TextField fx:id="signalPeriodInput" promptText="[s]" GridPane.rowIndex="7" />
-                <Label text="Częstotliwość próbkowania:" GridPane.rowIndex="8" />
-                <TextField fx:id="probeFrequencyInput" promptText="[Hz]" GridPane.rowIndex="9" />
-                <Label text="Długość buforów:" GridPane.rowIndex="10" />
-                <TextField fx:id="bufferSizeInput" GridPane.rowIndex="11" />
-                <Label text="Okres raportowania:" GridPane.rowIndex="12" />
-                <TextField fx:id="reportPeriodInput" promptText="[s]" GridPane.rowIndex="13" />
-                <Button fx:id="radarBtn" mnemonicParsing="false" prefWidth="120.0" text="Uruchom radar" GridPane.halignment="CENTER" GridPane.rowIndex="14" GridPane.valignment="CENTER">
+                <Label text="Prędkość rzeczywista:" GridPane.rowIndex="1" />
+                <TextField fx:id="realVelocityInput" promptText="[m/s]" GridPane.rowIndex="2" />
+                <Label text="Prędkość rozchodzenia się sygnału:" GridPane.rowIndex="3" />
+                <TextField fx:id="propagationVelocityInput" promptText="[m/s]" GridPane.rowIndex="4" />
+                <Label text="Okres sygnału sondującego:" GridPane.rowIndex="5" />
+                <TextField fx:id="signalPeriodInput" promptText="[s]" GridPane.rowIndex="6" />
+                <Label text="Częstotliwość próbkowania:" GridPane.rowIndex="7" />
+                <TextField fx:id="probeFrequencyInput" promptText="[Hz]" GridPane.rowIndex="8" />
+                <Label text="Długość buforów:" GridPane.rowIndex="9" />
+                <TextField fx:id="bufferSizeInput" GridPane.rowIndex="10" />
+                <Label text="Okres raportowania:" GridPane.rowIndex="11" />
+                <TextField fx:id="reportPeriodInput" promptText="[s]" GridPane.rowIndex="12" />
+                <Button fx:id="radarBtn" mnemonicParsing="false" prefWidth="120.0" text="Uruchom radar" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.valignment="CENTER">
                     <GridPane.margin>
                         <Insets bottom="5.0" top="10.0" />
                     </GridPane.margin>
                 </Button>
-                <Label text="Oryginalny dystans [m]:" GridPane.rowIndex="15" />
-                <Label fx:id="originalDistanceLabel" GridPane.rowIndex="16">
+                <Label text="Oryginalny dystans [mm]:" GridPane.rowIndex="14" />
+                <Label fx:id="originalDistanceLabel" GridPane.rowIndex="15">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></Label>
-                <Label text="Obliczony dystans [m]:" GridPane.rowIndex="17" />
-                <Label fx:id="calculatedDistanceLabel" GridPane.rowIndex="18">
+                <Label text="Obliczony dystans [mm]:" GridPane.rowIndex="16" />
+                <Label fx:id="calculatedDistanceLabel" GridPane.rowIndex="17">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding></Label>
